added lazy routing and styled entry route

--- a/src/app/views/dashboard/choose-team/choose-team.component.html
+++ b/src/app/views/dashboard/choose-team/choose-team.component.html
@@ -1,1 +1,13 @@
-<p>choose-team works!</p>
+<ng-container *ngIf="(team$ | async) as team">
+    <section class="my-pokemons">
+
+        <ng-container *ngFor="let pokemon of team">
+            <div class="pokemon-card">
+                {{pokemon}}
+            </div>
+        </ng-container>
+    </section>
+</ng-container>
+<section class="pokemon-box">
+
+</section>
