--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="grid">
-    <header></header>
+    <poke-header></poke-header>
     <aside>
         <nav>
             <ul>
@@ -11,5 +11,4 @@
     <main>
         <router-outlet></router-outlet>
     </main>
-    <footer></footer>
 </div>
