--- a/src/app/views/entry/entry.component.html
+++ b/src/app/views/entry/entry.component.html
@@ -1,8 +1,14 @@
-<main>
-    <form [formGroup]="form">
-        <label for="username">Username</label>
-        <input type="text" placeholder="John C. Martin" aria-autocomplete="username" name="username" id="username"
-            aria-required="true" formControlname="username">
-        <button type="submit" (click)="handleLoginRequest()">Login!</button>
-    </form>
-</main>
+<div class="wrapper">
+    <div class="container">
+        <main>
+            <form [formGroup]="form">
+                <label for="username">Your username? </label>
+                <input type="text" placeholder="Red" aria-autocomplete="username" name="username" id="username"
+                    aria-required="true" formControlName="username">
+                <button class="btn btn-primary" type="submit" (click)="handleLoginRequest()">
+                    LOGIN
+                </button>
+            </form>
+        </main>
+    </div>
+</div>
