Modeled graphql requests updated prettier created views isolated pokemon service

--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -3,7 +3,9 @@
     <aside>
         <nav>
             <ul>
-                <li>Choose a team!</li>
+                <li [routerLink]="['pokedex']">Pokedex</li>
+                <li [routerLink]="['my-team']">My team</li>
+                <li [routerLink]="['my-box']">My box</li>
                 <li>Fight!</li>
             </ul>
         </nav>
