--- a/src/assets/sass/abstract/mixins.scss
+++ b/src/assets/sass/abstract/mixins.scss
@@ -39,31 +39,8 @@
     transition: $property $time cubic-bezier(0.175, 0.885, 0.3, 1.1);
 }
 
-@mixin full-percent-size {
-    width: 100%;
-    height: 100%;
-}
-
-@mixin full-virtual-size {
-    width: 100vw;
-    height: 100vw;
-}
-
 @mixin animation-blink($time: 0.5s) {
     animation: blink $time infinite linear;
-}
-
-// @mixin light-shadow-primary($opacity: 0.15) {
-//     -webkit-box-shadow: 5px 6px 12px 0px rgba(78, 208, 206, $opacity);
-//     box-shadow: 5px 6px 12px 0px rgba(78, 208, 206, $opacity);
-// }
-@mixin light-shadow-primary($opacity: 0.15) {
-    box-shadow: 8px 12px 23px rgb(0 0 0 / 12%);
-}
-
-@mixin light-shadow-secondary($opacity: 0.15) {
-    -webkit-box-shadow: 5px 6px 12px 0px rgba(78, 208, 206, $opacity);
-    box-shadow: 5px 6px 12px 0px rgba(78, 208, 206, $opacity);
 }
 
 @mixin pokemon-border() {
@@ -72,4 +49,9 @@
     border: 1px solid $color-black;
     outline: 2px solid $color-black;
     outline-offset: 3px;
+}
+
+@mixin container-limit() {
+    max-width: 1000px;
+    margin: auto;
 }
