--- a/src/assets/sass/base/base.scss
+++ b/src/assets/sass/base/base.scss
@@ -46,12 +46,18 @@ header {
 
 h1 {
     margin: 1rem 0 #{"clamp(0.5rem, 0.2rem + 3vw, 2.8rem)"} 0;
-    font-size: #{"clamp(2.5rem, 2rem + 3vw, 6rem)"};
+    font-size: #{"clamp(2.4rem, .4rem + 2vw, 5.6rem)"};
 }
 
 h2 {
     margin: 1rem 0 #{"clamp(0.5rem, 0.2rem + 3vw, 2.8rem)"} 0;
-    font-size: #{"clamp(2.25rem, 1.8rem + 3vw, 5.5rem)"};
+    font-size: #{"clamp(2rem, .4rem + 3vw, 3.8rem)"};
+    font-weight: 300;
+}
+
+h3 {
+    margin: 1rem 0 #{"clamp(0.3rem, 0.2rem + 3vw, 2.2rem)"} 0;
+    font-size: #{"clamp(1.6rem, .4rem + 3vw, 2.2rem)"};
     font-weight: 300;
 }
 
@@ -68,6 +74,8 @@ img {
     max-inline-size: 100%;
     block-size: auto;
     display: block;
+    filter: grayscale(.9);
+    image-rendering: pixelated
 }
 
 section {
