--- a/src/app/shared/components/poke-card/poke-card.component.html
+++ b/src/app/shared/components/poke-card/poke-card.component.html
@@ -1,5 +1,4 @@
-<div [ngClass]="{'horizontal': config.mode === 'horizontal', 'vertical': config.mode === 'vertical'}"
-    class="pokemon-card-wrapper">
+<div class="pokemon-card-wrapper">
     <div class="pokemon-card">
         <h3>{{pokemon.name}}</h3>
         <picture>
