--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
 <div class="grid">
-    <poke-header></poke-header>
+    <header>
+        <poke-header></poke-header>
+    </header>
     <aside>
         <nav>
             <ul>
