--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<div class="wrapper">
+    <div class="container">
+        <div class="logo">
+            Pokémon
+        </div>
+        <div class="user"></div>
+    </div>
+</div>
