--- a/src/app/views/dashboard/pokedex/pokedex.component.scss
+++ b/src/app/views/dashboard/pokedex/pokedex.component.scss
@@ -1,59 +1,93 @@
 @import "/src/assets/sass/main.scss";
 
 .viewport {
+    position: relative;
     min-height: 400px;
     margin: auto;
     background-color: white;
     width: 100%;
-    padding: 20px 0;
+    padding: 10px 20px 10px 15px;
     @include container-limit;
 
-    .cdk-viewport {
-        width: calc(100% - 20px);
-        height: 480px;
-        .no-pokemons-message {
-            margin: 20px auto;
-        }
-    }
-    .fake-table-header {
-        display: flex;
-        font-size: 1.8rem;
-        @include pokemon-border;
-        margin: 10px 45px 15px 15px;
-        padding: 10px;
-        margin-top: 20px;
+    table {
+        width: 100%;
+        border-collapse: collapse;
 
-        .empty {
-            flex: 1.5;
-            order: 1;
+        @include pokemon-border;
+        margin: 0;
+
+        .no-pokemons-message {
+            td {
+                padding: 20px;
+                text-align: center;
+            }
+        }
+        thead {
+            tr {
+                border-bottom: 1px solid black;
+                th {
+                    font-size: 1.8rem;
+                    padding: 8px 10px 8px 0;
+                    text-align: start;
+                    min-width: 120px;
+                    margin-right: 10px;
+                    cursor: pointer;
+
+                    &.sprite {
+                        text-align: center;
+                    }
+                    &.id {
+                        text-align: end;
+                    }
+                }
+            }
+        }
+
+        .sprite {
+            img {
+                width: 96px;
+                height: 96px;
+                margin: auto;
+            }
         }
 
         .name {
-            display: none;
-            flex: 1.8;
-            order: 2;
+            text-transform: capitalize;
         }
 
         .id {
-            display: none;
-            flex: 1;
-            order: 3;
+            text-align: end;
+            padding-right: 20px;
         }
 
-        .stats {
-            display: none;
+        tbody {
+            padding: 10px;
+
+            tr {
+                border-bottom: 1px solid $color-lightgray;
+            }
         }
 
-        .pokemon {
-            flex: 1;
-            order: 2;
+        @include tablet() {
+            .name {
+            }
+            .id {
+            }
+            .sprite {
+                img {
+                    width: 128px;
+                    height: 128px;
+                }
+            }
         }
     }
     .filters {
         text-align: center;
         padding: 10px;
         @include pokemon-border;
-        margin: 10px 45px 15px 15px;
+        margin: 0;
+        margin-bottom: 20px;
+
         input {
             text-align: start;
             display: block;
@@ -62,42 +96,15 @@
         }
     }
 
+    .pagination {
+        display: flex;
+        padding-top: 20px;
+        button:first-child {
+            margin-right: 10px;
+        }
+    }
+
     @include tablet() {
-        padding: 20px;
-
-        .filters {
-            text-align: start;
-            input {
-                display: inline-block;
-                margin-left: 10px;
-            }
-        }
-
-        .fake-table-header {
-            > * {
-                cursor: pointer;
-            }
-            .pokemon {
-                display: none;
-            }
-            .empty {
-                flex: 1;
-            }
-            .name {
-                display: block;
-                flex: 1.8;
-                order: 2;
-            }
-            .id {
-                display: block;
-                flex: 1;
-                order: 3;
-            }
-            .stats {
-                display: block;
-                flex: 1;
-                order: 4;
-            }
-        }
+        padding: 10px 40px;
     }
 }
