--- a/src/assets/sass/abstract/variables.scss
+++ b/src/assets/sass/abstract/variables.scss
@@ -1,6 +1,6 @@
 $color-black: #181818;
 $font-color-gray: #606060;
 $color-lightgray: #ececec;
-$color-disabled: #f2f2f2;
+$color-disabled: #d2d2d2;
 $color-shallow-text: #b7b7b7;
 $color-pink: #ffbcbb;
