created modal and pokemon details

--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
                 <li [routerLink]="['pokedex']">Pokedex</li>
                 <li [routerLink]="['my-team']">My team</li>
                 <li [routerLink]="['my-box']">My box</li>
-                <li>Fight!</li>
+                <li [routerLink]="['fight']">Fight!</li>
             </ul>
         </nav>
     </aside>
