--- a/src/app/views/dashboard/fight/fight.component.html
+++ b/src/app/views/dashboard/fight/fight.component.html
@@ -1,1 +1,12 @@
-<p>fight works!</p>
+<main>
+    <p>
+        Oops... this section is still under construction. <br>
+        Currently I have a tight schedule but...<br>
+        In the meantime, why don't we listen to some <b>absolutely legal</b> pokémon music?
+    </p>
+    <p>Disclaimer: previous paragraph may be half true.</p>
+
+    <audio controls>
+        <source src="assets/music/gold-trainer-music.ogg">
+    </audio>
+</main>
