--- a/src/app/views/dashboard/pokedex/pokedex.component.scss
+++ b/src/app/views/dashboard/pokedex/pokedex.component.scss
@@ -65,6 +65,17 @@
 
             tr {
                 border-bottom: 1px solid $color-lightgray;
+                img {
+                    @include main-transition;
+                }
+
+                &:hover {
+                    cursor: pointer;
+                    img {
+                        filter: grayscale(0.1);
+                        transform: scale(1.1);
+                    }
+                }
             }
         }
 
@@ -98,6 +109,7 @@
 
     .pagination {
         display: flex;
+        justify-content: flex-end;
         padding-top: 20px;
         button:first-child {
             margin-right: 10px;
