--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -5,10 +5,10 @@
     <aside>
         <nav>
             <ul>
-                <li [routerLink]="['pokedex']">Pokedex</li>
-                <li [routerLink]="['my-team']">My team</li>
-                <li [routerLink]="['my-box']">My box</li>
-                <li [routerLink]="['fight']">Fight!</li>
+                <li [routerLinkActive]="['active']" [routerLink]="['pokedex']">Pokedex</li>
+                <li [routerLinkActive]="['active']" [routerLink]="['my-team']">My team</li>
+                <li [routerLinkActive]="['active']" [routerLink]="['my-box']">My box</li>
+                <li [routerLinkActive]="['active']" [routerLink]="['fight']">Fight!</li>
             </ul>
         </nav>
     </aside>
