--- a/src/app/views/dashboard/fight/fight.component.html
+++ b/src/app/views/dashboard/fight/fight.component.html
@@ -4,7 +4,7 @@
         Currently I have a tight schedule but...<br>
         In the meantime, why don't we listen to some <b>absolutely legal</b> pokémon music?
     </p>
-    <p>Disclaimer: previous paragraph may be half true.</p>
+    <p>Disclaimer: Bold font affirmations may not be true.</p>
 
     <audio controls>
         <source src="assets/music/gold-trainer-music.ogg">
