--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -14,7 +14,6 @@
             "header header"
             "aside main";
         grid-template-columns: 2fr 8fr;
-
     }
 
     header {
@@ -22,6 +21,30 @@
     }
     aside {
         grid-area: aside;
+
+        nav {
+            @include pokemon-border;
+            height: 100%;
+            margin-left: 10px;
+            min-height: 800px;
+
+            ul {
+                li {
+                    cursor: pointer;
+                    font-size: 1.6rem;
+                    padding: 20px;
+                    border-bottom: 1px solid $color-lightgray;
+
+                    &.active {
+                        background-color: $color-lightgray;
+
+                        &::before {
+                            content: '► ';
+                        }
+                    }
+                }
+            }
+        }
     }
     main {
         grid-area: main;
