--- a/src/assets/sass/abstract/variables.scss
+++ b/src/assets/sass/abstract/variables.scss
@@ -4,3 +4,23 @@ $color-lightgray: #ececec;
 $color-disabled: #d2d2d2;
 $color-shallow-text: #b7b7b7;
 $color-pink: #ffbcbb;
+
+// Pokemon Background Variables
+$color-poke-bg-grass: #76C560;
+$color-poke-bg-poison: #A244A2;
+$color-poke-bg-fire: #EF784A;
+$color-poke-bg-flying: #997CED;
+$color-poke-bg-water: #638BEF;
+$color-poke-bg-bug: #A8B820;
+$color-poke-bg-normal: #ACAC7E;
+$color-poke-bg-electric: #F8D237;
+$color-poke-bg-ground: #E5CB83;
+$color-poke-bg-fairy: #EE9BAD;
+$color-poke-bg-fighting: #C1322B;
+$color-poke-bg-psychic: #F85786;
+$color-poke-bg-steel: #A8A8C5;
+$color-poke-bg-ghost: #705898;
+$color-poke-bg-rock: #B3984D;
+$color-poke-bg-dragon: #6C36F8;
+$color-poke-bg-ice: #91D5D5;
+$color-poke-bg-dark: #705848;
