improved responsive for all pages

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,15 +1,11 @@
 @import "/src/assets/sass/main.scss";
 
 .wrapper {
-    margin: 10px;
-
     .container {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        @include pokemon-border;
-        padding: 5px 15px;
-        margin: 15px 5px;
+        padding: 15px;
 
         .logo {
             font-weight: 600;
