--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -3,10 +3,6 @@
 footer {
     text-align: center;
     padding: 20px;
+    margin: 10px;
     @include pokemon-border;
-    margin: 40px 30px;
-
-    @include tablet() {
-        margin: 40px 10px 10px 10px;
-    }
 }
