added contact info

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -8,4 +8,13 @@
         <p><i>{{joke.joke.joke}}</i></p>
         <!-- :P -->
     </ng-container>
+
+    <p class="contact-me">
+        If you like this project maybe you'll find my skills useful for yours, feel free to contact me at <a
+            lang="spanish" href="https://www.linkedin.com/in/leandro-al%C3%AD-elel-064093110/" target="__blank">My
+            Linkedin</a>. <br>
+        And of course, here is my CV: <a lang="spanish" target="__blank"
+            href="https://carnelian-hollyhock-f70.notion.site/Leandro-Al-Elel-653035a63f17417eb5c65c728cd5b7f1"> My
+            Notion CV</a>
+    </p>
 </footer>
