--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -5,4 +5,9 @@ footer {
     padding: 20px;
     margin: 10px;
     @include pokemon-border;
+
+    .contact-me {
+        font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana,
+            sans-serif;
+    }
 }
