improved wording for components and created metareducer to logout

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -3,6 +3,6 @@
         <div class="logo">
             Pokémon
         </div>
-        <div class="user"></div>
+        <div (click)="logout()" class="user">Logout</div>
     </div>
 </div>
