--- a/src/app/views/dashboard/pokedex/pokedex.component.html
+++ b/src/app/views/dashboard/pokedex/pokedex.component.html
@@ -1,4 +1,6 @@
 <main class="viewport">
+    <h1>Pokemon Evolution</h1>
+    <h2>Select a Pokemon to see his evolution chain</h2>
     <ng-container *ngIf="(pokemons$ |async) as pokemons">
         <div class="filters">
             <label for="search">Search pokemon by name or ID:</label>
