--- a/src/app/views/dashboard/pokedex/pokedex.component.scss
+++ b/src/app/views/dashboard/pokedex/pokedex.component.scss
@@ -7,6 +7,7 @@
     background-color: white;
     width: 100%;
     @include container-limit;
+    text-align: center;
 
     table {
         width: 100%;
