--- a/src/assets/sass/abstract/variables.scss
+++ b/src/assets/sass/abstract/variables.scss
@@ -1,14 +1,16 @@
 // Color palette
-$color-black: #181818;
+$color-black: #1e1e1e;
 $font-color-gray: #606060;
 $color-lightgray: #ececec;
-$color-disabled: #d2d2d2;
 $color-shallow-text: #b7b7b7;
 
 // Toast
 $color-pink: #f1d6d4;
 $color-info: #f5f5f5;
 
+// Button
+$color-disabled: rgb(234, 234, 234);
+$color-hover: rgb(245, 245, 245);
 // Pokemon Background Variables
 $color-poke-bg-grass: #76c560;
 $color-poke-bg-poison: #a244a2;
