--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -10,7 +10,7 @@
     </ng-container>
 
     <p class="contact-me">
-        If you like this project maybe you'll find my skills useful for yours, feel free to contact me at <a
+        If you like this project maybe you'll find my skills useful, feel free to contact me at <a
             lang="spanish" href="https://www.linkedin.com/in/leandro-al%C3%AD-elel-064093110/" target="__blank">My
             Linkedin</a>. <br>
         And of course, here is my CV: <a lang="spanish" target="__blank"
