changed absolute main scss path

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,4 +1,5 @@
-@import "/src/assets/sass/main.scss";
+@import "src/assets/sass/abstract/mixins";
+@import "src/assets/sass/abstract/variables";
 
 .wrapper {
     .container {
