--- a/src/app/views/dashboard/my-box/my-box.component.scss
+++ b/src/app/views/dashboard/my-box/my-box.component.scss
@@ -1,4 +1,6 @@
-@import "/src/assets/sass/main.scss";
+@import "src/assets/sass/abstract/mixins";
+@import "src/assets/sass/abstract/variables";
+
 main {
     text-align: center;
 
