added random view

--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -9,6 +9,7 @@
                 <li [routerLinkActive]="['active']" [routerLink]="['my-team']">My team</li>
                 <li [routerLinkActive]="['active']" [routerLink]="['my-box']">My box</li>
                 <li [routerLinkActive]="['active']" [routerLink]="['fight']">Fight!</li>
+                <li [routerLinkActive]="['active']" [routerLink]="['random-pokemon']">Random Pokemon</li>
             </ul>
         </nav>
     </aside>
