--- a/src/app/shared/components/modal/modal.component.scss
+++ b/src/app/shared/components/modal/modal.component.scss
@@ -17,8 +17,7 @@
         min-width: 280px;
         max-width: 768px;
         width: 100%;
-        height: 100%;
-        overflow: hidden;
+        overflow: auto;
         background-color: white;
         @include pokemon-border;
         padding: 20px;
