--- a/src/app/shared/components/poke-detail/poke-detail.component.scss
+++ b/src/app/shared/components/poke-detail/poke-detail.component.scss
@@ -1,11 +1,13 @@
 @import "/src/assets/sass/main.scss";
 
+h1 {
+    padding-top: 30px;
+}
+
 .wrapper {
     text-align: center;
     height: 100%;
-    h1 {
-        padding-top: 30px;
-    }
+    overflow: auto;
     .content {
         max-width: 100%;
         height: 100%;
