--- a/src/assets/sass/abstract/variables.scss
+++ b/src/assets/sass/abstract/variables.scss
@@ -4,6 +4,8 @@ $font-color-gray: #606060;
 $color-lightgray: #ececec;
 $color-shallow-text: #b7b7b7;
 
+// Pokemon
+$color-shiny: rgb(255, 241, 165);
 // Toast
 $color-pink: #f1d6d4;
 $color-info: #f5f5f5;
@@ -11,6 +13,7 @@ $color-info: #f5f5f5;
 // Button
 $color-disabled: rgb(234, 234, 234);
 $color-hover: rgb(245, 245, 245);
+
 // Pokemon Background Variables
 $color-poke-bg-grass: #76c560;
 $color-poke-bg-poison: #a244a2;
