--- a/src/app/views/dashboard/fight/fight.component.html
+++ b/src/app/views/dashboard/fight/fight.component.html
@@ -1,4 +1,11 @@
 <main>
+    <ng-container *ngIf="(myPokemon$ | async) as myPokemon">
+        {{myPokemon.name}}
+    </ng-container>
+    VS
+    <ng-container *ngIf="(enemyPokemon$ | async) as enemyPokemon">
+        {{enemyPokemon.name}}
+    </ng-container>
     <p>
         Oops... this section is still under construction. <br>
         Currently I have a tight schedule but...<br>
