hide fight button

--- a/src/app/views/dashboard/fight/fight.component.html
+++ b/src/app/views/dashboard/fight/fight.component.html
@@ -19,7 +19,7 @@
     </p>
     <p>Disclaimer: Bold font affirmations may not be true.</p>
 
-    <button (click)="startBattle()">Start battle!</button>
+    <!-- <button (click)="startBattle()">Start battle!</button> -->
     <audio controls>
         <source src="assets/music/gold-trainer-music.ogg">
     </audio>
